# chip-ood

./: .gitignore  LICENSE  README.md  final_metrics.json  metrics.jsonl  pyproject.toml  requirements.txt
docs/: domainbed_data_setup.md  manual_downloads.md
experiments/: EXPERIMENTS.md  domainbed_protocol.json  icml_cmnist_10seed.csv  icml_cmnist_results.csv  icml_cmnist_tuning_phase1.csv  icml_mechanism_audit.csv  summary_icml.md
scripts/: convert_hf_datasets.py  create_mock_domainbed.py  debug_colored_mnist_dataset.py  download_domainbed.sh  download_hf_data.py  download_real_data.py  inspect_hf_structure.py  run_all_minimal.sh  run_cmnist_10seed.sh  run_cmnist_icml.sh  run_cmnist_tuning.sh  run_colored_mnist.sh  run_domainbed_phase1.sh  sweep_domainbed.py  verify_domainbed_data.sh
scripts/slurm/: run_domainbed_final.slurm  run_domainbed_tuning.slurm
src/chip_ood.egg-info/: PKG-INFO  SOURCES.txt
src/chip_ood/configs/: default.yaml
src/chip_ood/configs/exp/: domainbed_baselines.yaml
src/chip_ood/configs/logging/: base.yaml
src/chip_ood/configs/method/: chip.yaml  erm.yaml
src/chip_ood/configs/trainer/: base.yaml
src/chip_ood/evaluation/: aggregate.py  eval_mechanisms.py  mechanism_draft.py
src/chip_ood/methods/: __init__.py  chip.py  coral.py  eiil.py  erm.py  group_dro.py  irm.py
src/chip_ood/models/: __init__.py  adversaries.py  decoders.py  encoders.py
src/chip_ood/training/: trainer.py
src/cirl_ood.egg-info/: PKG-INFO  requires.txt  top_level.txt
tests/: test_colored_mnist_spuriousness.py  test_forward_pass.py  test_imports.py
